infopage edut / issue > close button broken by z-index

--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ a {
     position: absolute;
     color: #fff;
     transition: color .3s ease, transform .3s ease;
+    z-index: 2;
 }
 
 .backlink:hover {
@@ -115,9 +116,13 @@ a {
 /* hero header image */
 .hero {
     display: flex;
-    height: 35vh;
+    height: 80vh;
+    width: 100%;
     justify-content: center;
     align-items: center;
+    position: fixed;
+    left: 0;
+    z-index: -1;
 }
 
 .hero-image {
@@ -196,7 +201,7 @@ a {
 
 .sub-container {
     max-width: 40em;
-    margin: -12vh auto 0 auto;
+    margin: 80vh auto 0 auto;
     background: #fff;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
